# placsp-browser

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
deploy/: Dockerfile  cloud-init.yml  crontab  deploy.sh  discord-alert.sh  docker-compose.yml  etl-run.sh  setup-resilience.sh  stats-daily.sh  watchdog.sh
deploy/caddy/: Caddyfile
deploy/hetzner/: 01-setup-users.sh  02-setup-machine.sh  03-deploy.sh
schema/: 00_functions.sql  01_contracting_party.sql  02_contract_folder_status.sql  03_lots.sql  04_results.sql  05_terms.sql  06_notices.sql  07_documents.sql  08_modifications.sql  09_etl.sql  10_catalog.sql  11_api.sql  12_auth.sql  13_web_stats.sql  apply.sh  migrate_001_snake_case.sql  migrate_002_normalize_nif.sql  seed.sql
src/api/: auth.py  catalogs.py  deps.py  main.py  manage.py  middleware.py  render.py  schemas.py  stats.py
src/api/inteligencia/: __init__.py  estadisticas.py  similares.py  similitud.py
src/api/renderers/: __init__.py  markdown.py
src/api/routes/: admin.py  auth.py  buscar.py  catalogos.py  contratos.py  documentos.py  empresa.py  licitacion.py  lotes.py  organo.py  organos_contratantes.py  salud.py  similares.py
src/api/schemas/: __init__.py  auth.py  busqueda.py  cursor.py  detalle.py  empresa.py  organo.py  resumen.py  similares.py
src/etl/handlers/: catalog_updater.py  feed_reader.py
src/etl/parsers/: contracting_party.py  document.py  entry.py  lot.py  modification.py  page.py  procurement_project.py  tender_result.py  tendering_process.py  tendering_terms.py  valid_notice_info.py
src/etl/repositories/: __init__.py  catalog_repo.py  entry_repo.py  failed_entry_repo.py  protocols.py  sync_state_repo.py
src/etl/services/: catalog_updater.py  feed_reader.py
src/shared/: config.py  db.py  enums.py  logger.py
src/shared/codice/: nif.py  xml_helpers.py
src/shared/models/: __init__.py  awarding_criteria.py  business_classification.py  contract.py  contract_folder_status.py  contract_modification.py  contracting_party.py  cpv_classification.py  document_reference.py  etl.py  execution_condition.py  financial_guarantee.py  (+9 more)
src/web/: routes.py  stats.py
tests/api/: conftest.py  test_negotiation_e2e.py  test_render.py  test_renderers_markdown.py  test_salud.py  test_similares.py  test_similares_live.py
(+33 files in other folders)
